Finalizado - Landpage - Cliente Interface - Payout done

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EMail": {
+    "UserName": "maurocv18@hotmail.com",
+    "Nome": "AJAY Store",
+    "Host": "smtp-mail.outlook.com",
+    "Senha": "Mjand.cv1H",
+    "Porta": "587"
+  },
   "AllowedHosts": "*"
 }
